--- a/generator/templates/generator/bandsongs.html
+++ b/generator/templates/generator/bandsongs.html
@@ -1,10 +1,10 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'generator/style.css' %}">
-
-{% if song_list %}
+<h1><a href="/generator/{{ context.band.id }}/generate">Generate Setlist</a></h1>
+{% if context.songs %}
     <ul>
-    {% for song in song_list %}
+    {% for song in context.songs %}
         <li>{{ song.title }}</li>
     {% endfor %}
     </ul>
